2019-06-21  Felipe Castro (-) <fefcas@gmail.com>;
	* Release 3.09
	* Fixed:
	- Internet ranking server now is https://klavaro.sourceforge.io/top10/
	* Updated translations:
	- Swedish.

2019-06-21  Felipe Castro (-) <fefcas@gmail.com>;
	* Release 3.08
	* Fixed:
	- Disabling beeps internally too.
	- qwertz_sk_2.kbd is a qwerty one: --> qwerty_sk.kbd (Slovakia)
	- qwertz_sk.kbd is for Slovenia:  -->  qwertz_si.kbd
	* Added: 
	- Portuguese translation, from Portugal (pt).
	- Hotkey Ctrl+F: font configuration.
	- Hotkey Ctrl+KP_plus: increase spin buttons.
	- Hotkey Ctrl+KP_minus: decrease spin buttons.
	- Hotkeys Ctrl+R or Escape: cancel current practice, start a new one.
	- Alternative colors toggle button in tutor window. At first time run,
	  a default "dark mode" is copied to the file: $HOME/.config/klavaro/altcolor.ini

2019-06-02  Felipe Castro (-) <fefcas@gmail.com>;
	* Release 3.07
	* Fixed:
	- Contry code for Slovenia is sk, not sl.
	- Using $(rootdatadir) for Gnome metadata.
	* Added:
	- qwertz_sk_2.kbd keyboard layout for Slovenia.
	- /usr/.../share/klavaro/preferences_darkmode.ini as dark colors example.
	* Removed:
	- Beeps, as they were not reliable.
	* Updated translations:
	- Dutch.
	- French.

2019-05-03  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.06
	* Changed:
	- GtkDataBox library clean-up.
	- Updated building infra to compile also on Windows.

2019-03-17  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.05
	* Fixed:
	- Crashing when not recognized option from command-line.
	* Added:
	- Instructions for typing with the shift keys (in the introduction).
	- Explanation about the blank lessons after 43, in basic module.
	- Possible to reset progress log of each module individually, as well
	  as character error charts or touch times charts in adaptability.
	- Possible to use paragraphs complete texts in Speed module (klavaro -x).
	* Updated translations:
	- Croatian.
	- Danish.
	- Esperanto.
	- Polish.
	- Portuguese (BR).
	- Russian.